--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -76,7 +76,7 @@
       width: 100%;
       text-align: left;
       font: bold 16px sans-serif;
-
+      position: relative;
       padding: 55px 50px;
       margin-top: 80px;
     }
