add background color in menu (css)

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -26,6 +26,7 @@
 
     .ui.secondary.pointing.menu {
       padding-bottom: 10px;
+      background-color: white;
     }
 
     .boss-link-container {
